@@ -32,6 +32,7 @@
 	- UART "bridge" name deprecated in favor of "crossover" (already supported).
 	- "external" CPU class support deprecated (replaced by out-of-tree support).
 	- lxterm/lxserver/lxsim short names deprecated (used long litex_xy names).
+	- Deprecate JTAG-Atlantic support (Advantageously replaced by JTAG-UART).
 
 [> 2021.12, released on January 5th 2022
 ----------------------------------------
